styles/contact.module.css
.container {
	margin-top: 0;
	min-height: 100vh;
	padding-bottom: 10vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	background: var(--bg-gradient);
}

.header_1 {
	color: var(--font-blue);
	text-align: center;
	font-size: 30px;
	font-family: "Poppins-Regular", sans-serif;
	margin-top: 1em;
}
.header_2 {
	margin-top: 2em;
	color: var(--font-blue);
	text-align: center;
	font-family: "Poppins-Regular", sans-serif;
	font-size: 20px;
}

.image_div {
	display: flex;
	justify-content: center;
	align-content: center;
	margin: 1em;
	width: 100%;
	height: 75vh;
	object-fit: "contain";
	position: relative;
}

.reach_outer_card {
	border-radius: 10px;
	margin-top: 2em;
	padding: 1em;
	width: 100%;
	max-width: 1000px;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	box-shadow: var(--drop-shadow-1);
}

.reach_inner_card {
	background: var(--background-color);
	border-radius: 20px;
	border: 2px solid #ff6b00;
	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
	width: 90%;
	max-width: 600px;
	padding: 1em 2em;
	margin: 1em 0;
}

.header_3 {
	color: var(--font-blue);
	font-size: 30px;
	font-family: "Poppins-Regular", sans-serif;
	text-align: center;
	margin-top: 0.5em;
	margin-bottom: 0.5em;
}

.links {
	color: var(--font-blue);
	text-decoration: underline;
	font-family: "Poppins-Regular", sans-serif;
}

.outer_card {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	margin-top: 2em;
	margin-bottom: 2em;
	padding: 1em;
	width: 100%;
	max-width: 1000px;
	box-shadow: var(--drop-shadow-1);
	border-radius: 10px;
}

.form_card {
	display: grid;
	grid-template-columns: 1fr;
	gap: 2em;
	justify-items: stretch;
	width: 90%;
	max-width: 600px;
	padding: 2em 1.5em;
	margin: 1em 0;
	border-radius: 20px;
	border: 2px solid #ff6b00;
	background: #fff;
	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
	font-family: "Poppins-Regular", sans-serif;
}

.input {
	width: 100%;
	border-radius: 10px;
	border: 1px solid #c1694f;
	padding: 1em;
	font-size: 18px;
}

.submit_button {
	justify-self: center;
	font-size: 22px;
	align-items: center;
	padding: 0.75em 2em;
	margin-top: 1em;
	border-radius: 46px;
	border: 1px solid #000;
	background: var(--btn-gradient);
	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.3);
}

@media screen and (min-width: 768px) {
	.container {
		margin-top: 1em;
	}
}

